--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -408,6 +408,19 @@ html(lang='en')
                             .timeline-body
                                 p.text-muted
                                     | If you are familiar with web services and APIs, and want to have an overview of the OGC API - Features standard, this training is for you.
+                    li.timeline-inverted
+                        .timeline-image
+                            a(href='https://dev.to/doublebyte/sharing-geospatial-data-with-ogc-api-pygeoapi-and-mongodb-4lo7' title='E-learning' target="_blank")
+                                img.rounded-circle.img-fluid(src='assets/img/about/sawcer.jpeg', alt='...')
+                        .timeline-panel
+                            .timeline-heading
+                                h4.subheading Follow a tutorial
+                            .timeline-body
+                                p.text-muted
+                                    | Implement a complete pipeline to make your data available with OGC API - Features, using a stack of free and open source software.
+                                    | A video version is available 
+                                    a(href="https://dev.to/doublebyte/how-to-share-geospatial-data-on-the-web-54b7") here.
+
                             //a.btn.btn-dark.btn-social.mx-2(href='http://opengeospatial.github.io/e-learning/ogcapi-features/text/basic-index.html' title='E-learning' target="_blank")
                                 i.fa.fa-link
 
