--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -212,7 +212,7 @@ html(lang='en')
                         </tr>
                         <tr>
                         <th scope="row" rowspan="2" class="table-info">Python <i class="fab fa-python"></i></th>
-                        <td>Pygeoapi<sup>*</sup></td>
+                        <td>pygeoapi<sup>*</sup></td>
                         <td title="Github repository"><a href="https://github.com/geopython/pygeoapi"><i class="fab fa-github"></i></a></td>
                         <td title="Docker image"><a href="https://hub.docker.com/r/geopython/pygeoapi"><i class="fab fa-docker"></i></a></td>
                         <td title="Tutorial/Example"><a href="https://docs.pygeoapi.io/en/latest/"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
