--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -277,6 +277,12 @@ html(lang='en')
                         <td title="Github repository"><a href="https://github.com/OSGeo/gdal"><i class="fab fa-github"></i></a></td>
                         <td title="Tutorial/Example"><a href="https://gdal.org/drivers/vector/oapif.html"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
                         </tr>                        
+                        <tr>
+                        <th scope="row" class="table-info">Integration framework<i class="fa fa-wrench"></i> </th>
+                        <td>Apache Camel</td>
+                        <td title="Github repository"><a href="https://github.com/KaotoIO/step-extension-ogcapi-features-action"><i class="fab fa-github"></i></a><a href="https://github.com/apache/camel-kamelets/blob/main/kamelets/ogcapi-features-action.kamelet.yaml"><i class="fab fa-github"></i></a></td>
+                        <td title="Tutorial/Example"><a href="https://kaoto.io/portfolio/"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
+                        </tr>                        
                     </tbody>
                     </table>
 
