--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -174,6 +174,14 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.pvretano.com/cubewerx/cubeserv/default/ogcapi/zaatari/api?f=html' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
 
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/os-ngd-api-features.png', alt='...')
+                            h4 OS NGD API – Features
+                            p.text-muted Powered by The OS Data Hub
+                            p.text-muted Easy online access to the OS National Geographic Database, providing a rich and consistent information about the real world.
+                            a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Landing page' target="_blank")
+                                i.fa.fa-link
 
         section#implementations.page-section
             .container
