--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -45,9 +45,11 @@ html(lang='en')
                             a.nav-link(href='#team') Get Started
                         li.nav-item
                             a.nav-link(href='#contact') Get Involved
-                a(href='https://github.com/opengeospatial/ogc-features-website')
-                    img(style='position: absolute; top: 0; right: 0; border: 0;' src='https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png' alt='Fork me on GitHub')
+                //- a(href='https://github.com/opengeospatial/ogc-features-website')
+                //-     img(style='position: absolute; top: 0; right: 0; border: 0;' src='https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png' alt='Fork me on GitHub')
 
+                a(href='https://github.com/opengeospatial/ogc-features-website')
+                    img(style='position: absolute; top: 0; right: 0; border: 0;' src='https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png' alt='Fork me on GitHub')
 
 
         // Masthead
