--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -185,6 +185,17 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Landing page' target="_blank")
                                 i.fa.fa-link
 
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/OSMOttawa.png', alt='...')
+                            h4 Ottawa OpenStreetMap roads
+                            p.text-muted Powered by GNOSIS
+                            p.text-muted OpenStreetMap (OSM) is a free, open geographic database updated and maintained by a community of volunteers via open collaboration. This dataset is an OpenStreetMap extract that contains the roads of Ottawa, Canada.
+                            a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/collections/osm:ottawa:roads' title='Landing page' target="_blank")
+                                i.fa.fa-link
+                            a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/api' title='OpenAPI definition' target="_blank")
+                                i.fa.fa-code
+
         section#implementations.page-section
             .container
                 .text-center
