- updated "landing page" to "collection resource"

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -148,7 +148,7 @@ html(lang='en')
                             h4 Vineyards in Rhineland-Palatinate, Germany
                             p.text-muted Powered by Ldproxy
                             p.text-muted Have you ever wondered where the wine that you are drinking comes from? If the wine comes from the wine-growing regions Mosel, Nahe, Rheinhessen, Pfalz, Ahr, or Mittelrhein you can find this information in this API.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://demo.ldproxy.net/vineyards' title='Landing page' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://demo.ldproxy.net/vineyards' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://demo.ldproxy.net/vineyards/api/' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
@@ -159,7 +159,7 @@ html(lang='en')
                             h4 Portuguese Points of Interest
                             p.text-muted Powered by Pygeoapi
                             p.text-muted Portuguese Points of Interest obtained from OpenStreetMap. Dataset includes Madeira and Azores islands. Uses GeoPackage backend via OGR provider.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://demo.pygeoapi.io/master/collections/ogr_gpkg_poi' title='Landing page' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://demo.pygeoapi.io/master/collections/ogr_gpkg_poi' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://demo.pygeoapi.io/master/openapi?f=html' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
@@ -171,7 +171,7 @@ html(lang='en')
                             h4 Zaatari Refugee Camp مخيم الزعتري
                             p.text-muted Powered by CubeWerx
                             p.text-muted Zaatari is a refugee camp in Jordan, located 10 kilometres east of Mafraq, which has gradually evolved into a permanent settlement; it is the world’s largest camp for Syrian refugees.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://www.pvretano.com/cubewerx/cubeserv/default/ogcapi/zaatari' title='Landing page' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.pvretano.com/cubewerx/cubeserv/default/ogcapi/zaatari' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.pvretano.com/cubewerx/cubeserv/default/ogcapi/zaatari/api?f=html' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
@@ -182,7 +182,7 @@ html(lang='en')
                             h4 OS NGD API – Features
                             p.text-muted Powered by The OS Data Hub
                             p.text-muted Easy online access to the OS National Geographic Database, providing a rich and consistent information about the real world.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Landing page' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
 
                     .col-lg-4
@@ -191,7 +191,7 @@ html(lang='en')
                             h4 Ottawa OpenStreetMap roads
                             p.text-muted Powered by GNOSIS
                             p.text-muted OpenStreetMap (OSM) is a free, open geographic database updated and maintained by a community of volunteers via open collaboration. This dataset is an OpenStreetMap extract that contains the roads of Ottawa, Canada.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/collections/osm:ottawa:roads' title='Landing page' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/collections/osm:ottawa:roads' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/api' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
