- added IDEE to the list of demo servers

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -136,7 +136,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase See it In Action
-                    h3.section-subheading.text-muted This is a list of demo server implementations, that provide sample data. Please
+                    h3.section-subheading.text-muted This is a list of server implementations, that provide data. Please
                         a(href='mailto:jsimoes@ogc.org') get in touch
                         |, if you would like to add your server to the list.
                        
@@ -195,6 +195,16 @@ html(lang='en')
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://maps.gnosis.earth/ogcapi/api' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
+
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/wetlands.png', alt='...')
+                            h4 Geographic Objects from the National Cartographic System of Spain
+                            p.text-muted Powered by pygeoapi
+                            p.text-muted Includes collections such as Hydrography, Transport Networks, CartoCiudad postal addresses and the Information System on Land Occupation of Spain 2014 (SIOSE).
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/collections?f=html' title='Collections Resource' target="_blank")
+                                i.fa.fa-link
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/openapi?f=html' title='OpenAPI definition' target="_blank")
 
         section#implementations.page-section
             .container
