--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -202,7 +202,7 @@ html(lang='en')
                             h4 Geographic Objects from the National Cartographic System of Spain
                             p.text-muted Powered by pygeoapi
                             p.text-muted Includes collections such as Hydrography, Transport Networks, CartoCiudad postal addresses and the Information System on Land Occupation of Spain 2014 (SIOSE).
-                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/collections?f=html' title='Collections Resource' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/collections?f=html&lang=en' title='Collections Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/openapi?f=html' title='OpenAPI definition' target="_blank")
 
