--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -36,17 +36,15 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.text-uppercase.ms-auto.py-4.py-lg-0
                         li.nav-item
-                            a.nav-link(href='#services') Why
+                            a.nav-link(href='#why') Why
                         li.nav-item
                             a.nav-link(href='#portfolio') How
                         li.nav-item
-                            a.nav-link(href='#about') In Action
+                            a.nav-link(href='#inaction') In Action
                         li.nav-item
-                            a.nav-link(href='#team') Get Started
+                            a.nav-link(href='#getstarted') Get Started
                         li.nav-item
-                            a.nav-link(href='#contact') Get Involved
-                //- a(href='https://github.com/opengeospatial/ogc-features-website')
-                //-     img(style='position: absolute; top: 0; right: 0; border: 0;' src='https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png' alt='Fork me on GitHub')
+                            a.nav-link(href='#getinvolved') Get Involved
 
                 a(href='https://github.com/opengeospatial/ogc-features-website')
                     img(style='position: absolute; top: 0; right: 0; border: 0;' src='https://github.blog/wp-content/uploads/2008/12/forkme_right_darkblue_121621.png' alt='Fork me on GitHub')
@@ -61,14 +59,14 @@ html(lang='en')
                 //- a.btn.btn-primary.btn-xl.text-uppercase(href='#team') Get Started
 
                 
-                a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Tell Me More
-                a.btn.btn-primary.btn-xl.text-uppercase(href='#team') Get Started
+                a.btn.btn-primary.btn-xl.text-uppercase(href='#why') Tell Me More
+                a.btn.btn-primary.btn-xl.text-uppercase(href='#getstarted') Get Started
 
 
 
 
-        // Services
-        section#services.page-section
+        // Why
+        section#why.page-section
             .container
                 .text-center
                     h2.section-heading.text-uppercase Why?
@@ -131,8 +129,8 @@ html(lang='en')
                     |.
                     
 
-        // About
-        section#about.page-section
+        // In action
+        section#inaction.page-section
             .container
                 .text-center
                     h2.section-heading.text-uppercase See it In Action
@@ -184,6 +182,7 @@ html(lang='en')
                             p.text-muted Easy online access to the OS National Geographic Database, providing a rich and consistent information about the real world.
                             a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
+                            a.btn.btn-dark.btn-social.mx-2(href='https://osngd.gitbook.io/osngd/accessing-os-ngd/access-the-os-ngd-api-features' title='API documentation' target="_blank")
 
                     .col-lg-4
                         .team-member
@@ -426,8 +425,8 @@ html(lang='en')
 
 
 
-        // Team
-        section#team.page-section.bg-light
+        // Get started
+        section#getstarted.page-section.bg-light
             .container
                 .text-center
                     h2.section-heading.text-uppercase Get Started
@@ -494,7 +493,7 @@ html(lang='en')
                     //-             p.text-muted
                     //-                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
                     li.timeline-inverted
-                     a(href='#contact' title='Get Involved')
+                     a(href='#getinvolved' title='Get Involved')
                         .timeline-image
                             h4
                                 | Get
@@ -502,8 +501,8 @@ html(lang='en')
                                 | Involved!
 
 
-        // Contact
-        section#contact.page-section
+        // Get involved
+        section#getinvolved.page-section
              .container
                 .text-center
                     h2.section-heading.text-uppercase Get Involved
