- added links to supporting organisations

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -344,52 +344,38 @@ html(lang='en')
                 div.py-5
                     .container
                         .row.align-items-center
-
-                            //- .col-md-4.col-sm-6.my-4   
-                            //-     a(href='#!')
-                            //-         img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo.svg', alt='...')                                      
-                            //- .col-md-4.col-sm-6.my-4   
-                            //-     a(href='#!')
-                            //-         img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo2.svg', alt='...')                                      
-                            //- .col-md-4.col-sm-6.my-4   
-                            //-     a(href='#!')
-                            //-         img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo2.svg', alt='...')                                      
-                            //- .col-md-4.col-sm-6.my-4   
-                            //-     a(href='#!')
-                            //-         img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo2.svg', alt='...')                                      
-
                             .col-md-4.col-sm-.my-4
-                                a(href='#!')
+                                a(href='https://www.maxar.com/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/maxar_gold_logo_rgb.svg',  alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://www.esa.int/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/esa.svg', alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://natural-resources.canada.ca/home')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/nrcan.svg', alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://www.cubic.com/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/cubic.svg', alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://www.ordnancesurvey.co.uk/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/os.svg', alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://www.microsoft.com/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/microsoft2.svg', alt='...')
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://hexagon.com/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/hexagon.svg', alt='...')  
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://www.trimble.com/en')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/TrimbleR-Horiz-RGB-Blue.svg', alt='...')                                   
                             .col-md-4.col-sm-6.my-4
-                                a(href='#!')
+                                a(href='https://ecere.ca/"')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/ecere.svg', alt='...')
                             .col-md-4.col-sm-6.my-4   
-                                a(href='#!')
+                                a(href='https://www.interactive-instruments.de/en/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/interactive-instruments.svg', alt='...')                                      
                             .col-md-4.col-sm-6.my-4   
-                                a(href='#!')
+                                a(href='https://i-bitz.co.th/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo.svg', alt='...')                                      
 
                 p.text-muted.small 
@@ -431,39 +417,6 @@ html(lang='en')
 
                             //a.btn.btn-dark.btn-social.mx-2(href='http://opengeospatial.github.io/e-learning/ogcapi-features/text/basic-index.html' title='E-learning' target="_blank")
                                 i.fa.fa-link
-
-                    //- li.timeline-inverted
-                    //-     .timeline-image
-                    //-         a(href='https://github.com/opengeospatial/OGC-API-Sprint-September-2020/blob/master/docs/Draft_Spring_Guide_for_OGC_API_Features/Draft_Spring_Guide_for_OGC_API_Features.adoc' title='E-learning' target="_blank")
-                    //-             img.rounded-circle.img-fluid(src='assets/img/about/spring.jpeg', alt='...')
-                        //- .timeline-panel
-                        //-     .timeline-heading
-                        //-         h4.subheading Implement a server in Java
-                        //-     .timeline-body
-                        //-         p.text-muted
-                        //-             |  If you are a Java Spring developer and want to work with API definition files from the OGC API - Features standard, you can follow this guide.
-                            //a.btn.btn-dark.btn-social.mx-2(href='https://github.com/opengeospatial/OGC-API-Sprint-September-2020/blob/master/docs/Draft_Spring_Guide_for_OGC_API_Features/Draft_Spring_Guide_for_OGC_API_Features.adoc' title='E-learning' target="_blank")
-                                i.fa.fa-link
-                    //- li
-                    //-     .timeline-image
-                    //-         img.rounded-circle.img-fluid(src='assets/img/about/3.jpg', alt='...')
-                    //-     .timeline-panel
-                    //-         .timeline-heading
-                    //-             h4 December 2015
-                    //-             h4.subheading Transition to Full Service
-                    //-         .timeline-body
-                    //-             p.text-muted
-                    //-                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
-                    //- li.timeline-inverted
-                    //-     .timeline-image
-                    //-         img.rounded-circle.img-fluid(src='assets/img/about/4.jpg', alt='...')
-                    //-     .timeline-panel
-                    //-         .timeline-heading
-                    //-             h4 July 2020
-                    //-             h4.subheading Phase Two Expansion
-                    //-         .timeline-body
-                    //-             p.text-muted
-                    //-                 | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
                     li.timeline-inverted
                      a(href='#getinvolved' title='Get Involved')
                         .timeline-image
