--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -183,7 +183,8 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://osngd.gitbook.io/osngd/accessing-os-ngd/access-the-os-ngd-api-features' title='API documentation' target="_blank")
-
+                                i.fa.fa-book-open 
+                                
                     .col-lg-4
                         .team-member
                             img.mx-auto.rounded-circle(src='assets/img/OSMOttawa.png', alt='...')
@@ -204,6 +205,7 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/collections?f=html&lang=en' title='Collections Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/openapi?f=html' title='OpenAPI definition' target="_blank")
+                                i.fa.fa-book-open 
 
         section#implementations.page-section
             .container
