--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -207,6 +207,17 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://api-features.idee.es/openapi?f=html' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-book-open 
 
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/bugio.jpg', alt='...')
+                            h4 Aids to Navigation - List of Lights, Buoys and Fog Signals
+                            p.text-muted Powered by pygeoapi
+                            p.text-muted The Aids to Navigation feature collection contains updated information regarding maritime visual and sound signalling existing on the coast and in the interior of ports in Portugal.
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.hidrografico.pt/collections/aton?lang=en-US' title='Collections Resource' target="_blank")
+                                i.fa.fa-link
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.hidrografico.pt/openapi?lang=en-US' title='OpenAPI definition' target="_blank")
+                                i.fa.fa-book-open 
+
         section#implementations.page-section
             .container
                 .text-center
