--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -134,9 +134,9 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase See it In Action
-                    h3.section-subheading.text-muted This is a list of server implementations, that provide data. Please
+                    h3.section-subheading.text-muted This is a list of datasets, served by implementations of OGC API - Features. Please
                         a(href='mailto:jsimoes@ogc.org') get in touch
-                        |, if you would like to add your server to the list.
+                        |, if you would like to add your dataset to the list.
                        
 
                 .row
@@ -180,7 +180,7 @@ html(lang='en')
                             h4 OS NGD API – Features
                             p.text-muted Powered by The OS Data Hub
                             p.text-muted Easy online access to the OS National Geographic Database, providing a rich and consistent information about the real world.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://osdatahub.os.uk/' title='Collection Resource' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='Registration Page' title='' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://osngd.gitbook.io/osngd/accessing-os-ngd/access-the-os-ngd-api-features' title='API documentation' target="_blank")
                                 i.fa.fa-book-open 
@@ -213,7 +213,7 @@ html(lang='en')
                             h4 Aids to Navigation - List of Lights, Buoys and Fog Signals
                             p.text-muted Powered by pygeoapi
                             p.text-muted The Aids to Navigation feature collection contains updated information regarding maritime visual and sound signalling existing on the coast and in the interior of ports in Portugal.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.hidrografico.pt/collections/aton?lang=en-US' title='Collections Resource' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api-features.hidrografico.pt/collections/aton?lang=en-US' title='Collection Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://api-features.hidrografico.pt/openapi?lang=en-US' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-book-open 
@@ -224,7 +224,7 @@ html(lang='en')
                             h4 Key Register Large-scale Topography (BGT), Netherlands
                             p.text-muted Powered by GoKoala
                             p.text-muted Are you interested in large-scale topographic data of the Netherlands? In the Key Register Large-scale Topography (BGT) you can find all about building types, address labels, road segments (such as cycle paths, lanes, driveways, and shoulders), as well as topographic boundaries (such as fences and walls), terrain types, and water. You can access this data directly or use the landing page.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1_0-demo/collections/bakken?lang=en-US' title='Collections Resource' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1_0-demo/collections?lang=en-US' title='Collections Resource' target="_blank")
                                 i.fa.fa-link
                             a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1_0-demo/api?lang=en-US' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-book-open 
