--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -224,9 +224,9 @@ html(lang='en')
                             h4 Key Register Large-scale Topography (BGT), Netherlands
                             p.text-muted Powered by GoKoala
                             p.text-muted Are you interested in large-scale topographic data of the Netherlands? In the Key Register Large-scale Topography (BGT) you can find all about building types, address labels, road segments (such as cycle paths, lanes, driveways, and shoulders), as well as topographic boundaries (such as fences and walls), terrain types, and water. You can access this data directly or use the landing page.
-                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1_0-demo/collections?lang=en-US' title='Collections Resource' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1/collections?lang=en-US' title='Collections Resource' target="_blank")
                                 i.fa.fa-link
-                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1_0-demo/api?lang=en-US' title='OpenAPI definition' target="_blank")
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api.pdok.nl/lv/bgt/ogc/v1/api?lang=en-US' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-book-open 
 
         section#implementations.page-section
