- added dash to OGC API - Features

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title OGC API Features
+        title OGC API - Features
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -53,7 +53,7 @@ html(lang='en')
         // Masthead
         header.masthead
             .container
-                .masthead-heading.text-uppercase OGC API Features
+                .masthead-heading.text-uppercase OGC API - Features
                 .masthead-subheading Querying geospatial data on the web
                 //- a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Tell Me More
                 //- a.btn.btn-primary.btn-xl.text-uppercase(href='#team') Get Started
@@ -70,7 +70,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Why?
-                    h3.section-subheading.text-muted Main reasons for using OGC API Features.
+                    h3.section-subheading.text-muted Main reasons for using OGC API - Features.
                 .row.text-center
                     .col-md-4
                         span.fa-stack.fa-4x
@@ -92,7 +92,7 @@ html(lang='en')
                             i.fas.fa-layer-group.fa-stack-1x.fa-inverse
                         h4.my-3 Supported on Existing Products
                         p.text-muted
-                            | You can start using the OGC API Features specification today, by tapping into one of the 
+                            | You can start using the OGC API - Features specification today, by tapping into one of the 
                             a(href='#implementations') existing server or client implementations.
 
         // Portfolio Grid
@@ -100,7 +100,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Overview
-                    h3.section-subheading.text-muted OGC API Features provides access to collections of geospatial data.
+                    h3.section-subheading.text-muted OGC API - Features provides access to collections of geospatial data.
                     img(src='assets/img/overview.png', title='Source: https://demo.ldproxy.net/daraa', alt='..')
                 .text-left
                     ul
@@ -234,7 +234,7 @@ html(lang='en')
                 .text-center
                     h2.section-heading.text-uppercase Use it
 
-                    h3.section-subheading.text-muted Do you want to start using OGC API Features? Before starting to implement the spec, please take a look at the existing implementations. 
+                    h3.section-subheading.text-muted Do you want to start using OGC API - Features? Before starting to implement the spec, please take a look at the existing implementations. 
         
 
 
@@ -358,7 +358,7 @@ html(lang='en')
         section#adopters.page-section
             .container
                 .text-center
-                    h2.section-heading.text-uppercase Who is behind OGC API Features?
+                    h2.section-heading.text-uppercase Who is behind OGC API - Features?
                 p.text-muted 
                     | OGC API Features is developed through a member-driven consensus process, which creates royalty free, publicly available, open geospatial standards.
                     | The
@@ -404,7 +404,7 @@ html(lang='en')
 
                 p.text-muted.small 
                     | The logos above are a small subset of all OGC members.
-                    | They are either strategic/principal members, and/or organisations who implement products certified for OGC API Features.
+                    | They are either strategic/principal members, and/or organisations who implement products certified for OGC API - Features.
 
 
         // Get started
@@ -464,7 +464,7 @@ html(lang='en')
                                 i.fab.fa-stack-overflow.fa-stack-1x.fa-inverse
                         h4.my-3 Stack Overflow
                         p.text-muted
-                            | Engage with your peers and ask questions about OGC API Features using the tag 'OGC API Features'
+                            | Engage with your peers and ask questions about OGC API - Features using the tag 'OGC API - Features'
                     .col-md-4
                         span.fa-stack.fa-4x
                             a(href='https://discord.gg/3uyaZZuXr3' title='Discord')                        
@@ -472,7 +472,7 @@ html(lang='en')
                                 i.fab.fa-discord.fa-stack-1x.fa-inverse
                         h4.my-3 Discord
                         p.text-muted
-                            | Chat with other OGC API Features users in the OGC Community channel.
+                            | Chat with other OGC API - Features users in the OGC Community channel.
                     .col-md-4
                         span.fa-stack.fa-4x
                             a(href='https://github.com/opengeospatial/ogcapi-features' title='Github')
