--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -360,7 +360,7 @@ html(lang='en')
                 .text-center
                     h2.section-heading.text-uppercase Who is behind OGC API - Features?
                 p.text-muted 
-                    | OGC API Features is developed through a member-driven consensus process, which creates royalty free, publicly available, open geospatial standards.
+                    | OGC API Features is developed through a member-driven consensus process, which creates royalty free, publicly available, open geospatial Standards.
                     | The
                     a(href="https://www.ogc.org/") Open Geospatial Consortium (OGC)
                     | is the organisation which drives this process. It is supported by an active community of members, with involvement from a large range of organizations, as well as smaller ones. <a href="https://www.ogc.org/ogc/join/levels">Join OGC today!</a>
@@ -425,7 +425,7 @@ html(lang='en')
                                 h4.subheading Complete an online training
                             .timeline-body
                                 p.text-muted
-                                    | If you are familiar with web services and APIs, and want to have an overview of the OGC API - Features standard, this training is for you.
+                                    | If you are familiar with web services and APIs, and want to have an overview of the OGC API - Features Standard, this training is for you.
                     li.timeline-inverted
                         .timeline-image
                             a(href='https://dev.to/doublebyte/sharing-geospatial-data-with-ogc-api-pygeoapi-and-mongodb-4lo7' title='E-learning' target="_blank")
