- removed twitter handle

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -490,8 +490,8 @@ html(lang='en')
                     .col-lg-4.text-lg-start
                         | Copyright &copy; 2021. Open Geospatial Consortium all rights reserved
                     .col-lg-4.my-3.my-lg-0
-                        a.btn.btn-dark.btn-social.mx-2(href='https://twitter.com/opengeospatial/')
-                            i.fab.fa-twitter
+                        //- a.btn.btn-dark.btn-social.mx-2(href='https://twitter.com/opengeospatial/')
+                        //-     i.fab.fa-twitter
                         a.btn.btn-dark.btn-social.mx-2(href='https://www.youtube.com/user/ogcvideo')
                             i.fab.fa-youtube
                         //- a.btn.btn-dark.btn-social.mx-2(href='#!')
