- add reference to ogc api workshop

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -344,16 +344,6 @@ html(lang='en')
                         a(href='https://www.ogc.org/compliance' title='Compliance' target="_blank") compliant
                         | product.
 
-                    //- h3.section-subheading.text-muted An extensive list can be found
-                    //-     a(href='https://github.com/opengeospatial/ogcapi-features/tree/master/implementations' title='Implementations' target="_blank") here
-                    //-     |.
-
-                    //- span.fa-stack.fa-4x
-                    //-     a(href='https://github.com/opengeospatial/ogcapi-features/tree/master/implementations')
-                    //-         i.fas.fa-circle.fa-stack-2x.text-primary
-                    //-         i.fas.fa-rocket.fa-stack-1x.fa-inverse
-
-
 
         section#adopters.page-section
             .container
@@ -415,8 +405,8 @@ html(lang='en')
                 ul.timeline
                     li
                         .timeline-image
-                            a(href='http://opengeospatial.github.io/e-learning/ogcapi-features/text/basic-index.html' title='E-learning' target="_blank")
-                                img.rounded-circle.img-fluid(src='assets/img/about/elearning.jpeg', alt='...')
+                            a(href='https://ogcapi-workshop.ogc.org/api-deep-dive/features/' title='OGC API Workshop' target="_blank")
+                                img.rounded-circle.img-fluid(src='assets/img/about/ogcapi.png', alt='...')
                         .timeline-panel
                             .timeline-heading
                                 h4.subheading Complete an online training
