--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ html(lang='en')
         title OGC API - Features
 
         // Favicon
-        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel='icon', type='image/x-icon', href='assets/3d_emblem_lockup.ico')
 
         // Font Awesome icons (free version)
         script(src='https://use.fontawesome.com/releases/v5.15.3/js/all.js', crossorigin='anonymous')
