- added esri logo

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -388,6 +388,9 @@ html(lang='en')
                             .col-md-4.col-sm-.my-4
                                 a(href='https://www.maxar.com/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/maxar_gold_logo_rgb.svg',  alt='...')
+                            .col-md-4.col-sm-.my-4
+                                a(href='https://www.esri.com/')
+                                    img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/Esri_logo.svg',  alt='...')
 
                 p.text-muted.small 
                     | The logos above are a small subset of all OGC members.
