- added missing logos

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -320,17 +320,32 @@ html(lang='en')
                         <td colspan="2">Check <a href="https://gdal.org/drivers/vector/oapif.html">GDAL's documentation</a>.</td>          
                         </tr>                        
                         <tr>
-                        <th scope="row" class="table-info">JavaScript <i class="fab fa-js"></i></th>
+                        <th scope="row" rowspan="2" class="table-info">JavaScript <i class="fab fa-js"></i></th>
                         <td>ogcapi-js</td>
                         <td title="Github repository"><a href="https://github.com/haoliangyu/ogcapi-js"><i class="fab fa-github"></i></a></td>
                         <td title="Tutorial/Example"><a href="https://haoliangyu.github.io/ogcapi-js/"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
                         </tr>
                         <tr>
-                        <th scope="row" class="table-info">C/C++</th>
+                        <td>ArcGIS Maps SDK for JavaScript</td>
+                        <td></td>
+                        <td title="Tutorial/Example"><a href="https://developers.arcgis.com/javascript/latest/api-reference/esri-layers-OGCFeatureLayer.html"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
+                        </tr>
+                        <tr>
+                        <th scope="row" rowspan="3" class="table-info">C/C++</th>
                         <td>GDAL</td>
                         <td title="Github repository"><a href="https://github.com/OSGeo/gdal"><i class="fab fa-github"></i></a></td>
                         <td title="Tutorial/Example"><a href="https://gdal.org/drivers/vector/oapif.html"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
-                        </tr>                        
+                        </tr>
+                        <tr>
+                        <td>QGIS</td>
+                        <td title="Github repository"><a href="https://github.com/qgis/QGIS/"><i class="fab fa-github"></i></a></td>
+                        <td title="Tutorial/Example"><a href="https://github.com/opengeospatial/ogcapi-features/blob/master/implementations/clients/qgis.md"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
+                        </tr>                       
+                        <tr>
+                        <td>ArcGIS Pro</td>
+                        <td></td>
+                        <td title="Tutorial/Example"><a href="https://pro.arcgis.com/en/pro-app/latest/help/data/services/add-ogc-api-services.htm"><i class="fas fa-graduation-cap"></i>/<i class="fas fa-code"></i></a></td>                
+                        </tr> 
                         <tr>
                         <th scope="row" class="table-info">Integration framework<i class="fa fa-wrench"></i> </th>
                         <td>Apache Camel</td>
