add MSC example

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -174,6 +174,17 @@ html(lang='en')
                             a.btn.btn-dark.btn-social.mx-2(href='https://www.pvretano.com/cubewerx/cubeserv/default/ogcapi/zaatari/api?f=html' title='OpenAPI definition' target="_blank")
                                 i.fa.fa-code
 
+                    .col-lg-4
+                        .team-member
+                            img.mx-auto.rounded-circle(src='assets/img/ca-eccc-msc.png', alt='...')
+                            h4 MSC GeoMet - GeoMet-OGC-API
+                            p.text-muted Powered by pygeoapi
+                            p.text-muted GeoMet-OGC-API provides public access to the Meteorological Service of Canada (MSC) and Environment and Climate Change Canada (ECCC) data via interoperable web services and application programming interfaces (API). Through open standards, users can freely and quickly access thousands of real-time and archived weather, climate and water datasets and products and integrate them in their domain-specific applications and decision support systems. Users can build mobile apps, create interactive web maps, and display and animate MSC data in desktop software. MSC GeoMet also enables on demand raw data clipping and reprojection, on demand format conversion and custom visualization.
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api.weather.gc.ca' title='Landing page' target="_blank")
+                                i.fa.fa-link
+                            a.btn.btn-dark.btn-social.mx-2(href='https://api.weather.gc.ca/openapi' title='OpenAPI definition' target="_blank")
+                                i.fa.fa-code
+
 
         section#implementations.page-section
             .container
