--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -512,7 +512,7 @@ html(lang='en')
                         a.btn.btn-dark.btn-social.mx-2(href='https://www.linkedin.com/company/open-geospatial-consortium')
                             i.fab.fa-linkedin-in
                     .col-lg-4.text-lg-end
-                        a.link-dark.text-decoration-none.me-3(data-bs-toggle='modal', data-bs-target='#portfolioModal1') Privacy Policy - Test
+                        a.link-dark.text-decoration-none.me-3(data-bs-toggle='modal', data-bs-target='#portfolioModal1') Privacy Policy
                     //-     a.link-dark.text-decoration-none(href='#!') Terms of Use
 
         // Portfolio Modals
